fix: break all on small devices and box shadow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,3 +18,8 @@
 	-ms-overflow-style: none; /* IE and Edge */
 	scrollbar-width: none; /* Firefox */
 }
+
+.postContainer {
+	box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
+		rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
+}
